# AI-Shield

./: .gitignore  AI_Shield_Dateibasierte_Angriffe_und_Scananforderungen_DE.md  AI_Shield_Defender_Auditmodus.cmd  AI_Shield_Defender_Rollback.cmd  AI_Shield_Protect_System_Strict.cmd  AI_Shield_Sicherheitsstatus.cmd  AI_Shield_Start.cmd  AI_Shield_Start_Demo.cmd  AI_Shield_Stop.cmd  AI_Shield_Update_Drivers.cmd  AI_Shield_Vollstaendiger_Entwicklungsplan.docx  AI_Shield_Vollstaendiger_Entwicklungsplan.extracted.txt  AI_Shield_Vollstaendiger_Entwicklungsplan.md  CMakeLists.txt  NOTICE  README.md  SHA256SUMS.txt  Softwarebewertung.md  planfortsetzung.txt
docs/: ABI_2_0_DE.md  ABI_FREEZE_UND_HLK_DE.md  AI_Shield.md  AKTUELLER_INSTALLATIONSSTAND_DE.md  ARCHITEKTUR_WHITEBOARD_DE.md  AUDIT_VIEWER_DE.md  DEVELOPER_FULL_HANDBUCH_DE.md  DOWNLOADSCHUTZ_UND_FREIGABE_DE.md  DRIVER_SECURITY_LAB_DE.md  EDITIONEN_UND_VERSIONEN_DE.md  ENTERPRISE_EDITION_HANDBUCH_DE.md  ENTERPRISE_SECURITY_INTEGRATIONS_DE.md  ENTWICKLER_SCHNELLSTART_DE.md  EXTERNER_SECURITY_REVIEW_AUFTRAG_DE.md  FEHLENDE_FUNKTIONEN_DE.md  JUNIOR_ENTERPRISE_INTEGRATION_SCHNELLSTART_DE.md  KERNEL_HARDWARE_SCHUTZ_DE.md  NETZWERKSCHUTZ_DE.md  PRIVATE_DESKTOP_HANDBUCH_DE.md  PRODUKTQUALIFIKATION_DE.md  PROTOTYP_HANDBUCH_DE.md  RANSOMWARE_SCHUTZ_UND_RECOVERY_DE.md  RC10_RELEASE_NACHWEIS_DE.md  RC11_RELEASE_NACHWEIS_DE.md  RC12_RELEASE_NACHWEIS_DE.md  RC13_RELEASE_NACHWEIS_DE.md  RC8_RELEASE_NACHWEIS_DE.md  RC9_RELEASE_NACHWEIS_DE.md  README.md  SCHUTZABDECKUNG_2_0_DE.md  SICHERHEITSABSCHLUSS_DE.md  Softwarebewertung.md  WHITEPAPER_DE.md  WINDOWS_HARDENING_DE.md  ZIP_TIEFENANALYSE_UND_MINIFILTER_PENDING_DE.md  overview.md
docs/adr/: 0001-shared-core-boundary.md
docs/architecture/: overview.md
editions/private_desktop/: AI_Shield_Private_Desktop.md  AI_Shield_UI.cmd  Deinstallieren.cmd  Installieren.cmd  QUALIFIKATIONSSTATUS.md  README.md  RELEASE_CONTRACT.json  SOFTWAREBEWERTUNG_PRIVAT.md  Schutz_beenden.cmd  Schutz_starten.cmd  Status_anzeigen.cmd  edition.json  install_private_desktop.ps1  msi_product_action.ps1  private_common.ps1  private_posture.ps1  start_private_desktop.ps1  status_private_desktop.ps1  stop_private_desktop.ps1  uninstall_private_desktop.ps1  validate_release_freeze.ps1
editions/private_desktop/developer_full/: Build_All_Release.cmd  Build_All_Release.ps1  Install_Precompiled_Desktop.cmd  Install_Precompiled_Desktop.ps1  README_DE.md
editions/private_desktop/tray/: manage_tray_agent.ps1  start_tray_agent.ps1
editions/private_desktop/ui/: AIShield.AuditViewer.xaml  AIShield.PrivateDesktop.UI.xaml  README.md  private_security_settings.ps1  start_private_ui.ps1  verify_ui_contract.ps1
include/ai_shield/: abi.hpp  abi2.hpp  abi_validation.hpp  audit.hpp  backpressure.hpp  broker_runtime.hpp  build_attestation.hpp  campaign.hpp  causal_graph.hpp  checked.hpp  cloud_optin.hpp  compatibility_lab.hpp  consequence_detector.hpp  correlation.hpp  dataset_governance.hpp  detection.hpp  diagnostics.hpp  dns.hpp  egress_gate.hpp  fail_policy.hpp  features.hpp  file_preflight.hpp  flow_baseline.hpp  flow_control.hpp  flow_state.hpp  fuzz_plan.hpp  health.hpp  http1.hpp  http2_preflight.hpp  http_canonicalizer.hpp  incident_package.hpp  ipc_validator.hpp  ipv6_security.hpp  isolation_forest.hpp  json_preflight.hpp  learning_mode.hpp  maintenance_mode.hpp  model_registry.hpp  mutation_detector.hpp  package_manifest.hpp  (+40 more)
kernel/filesystem/: README.md
kernel/guard/: README.md
kernel/wfp/: README.md
platform/windows/: README.md  build_drivers.ps1  drivers.props  protect_system.ps1  start_ai_shield.ps1  stop_ai_shield.ps1
platform/windows/admin/: ai_shield_admin.ps1
platform/windows/asr/: evaluate_asr_audit.ps1
platform/windows/browser_extension/: install_browser_sensor.ps1  manifest.json  service_worker.js  sign_browser_host.ps1
platform/windows/common/: README.md  abi_translation.cpp  abi_translation.hpp  ai_shield_driver_protocol.h  ai_shield_event_queue.h
platform/windows/firewall/: firewall_baseline.ps1
platform/windows/installer/: README.md  ai_shield_wfp.inf  (+15 more)
src/: abi2.cpp  abi_validation.cpp  audit.cpp  backpressure.cpp  broker_runtime.cpp  build_attestation.cpp  campaign.cpp  causal_graph.cpp  cloud_optin.cpp  compatibility_lab.cpp  consequence_detector.cpp  dataset_governance.cpp  detection.cpp  diagnostics.cpp  dns.cpp  egress_gate.cpp  fail_policy.cpp  features.cpp  file_preflight.cpp  flow_baseline.cpp  flow_control.cpp  fuzz_plan.cpp  health.cpp  http1.cpp  http2_preflight.cpp  http_canonicalizer.cpp  incident_package.cpp  ipc_validator.cpp  ipv6_security.cpp  isolation_forest.cpp  json_preflight.cpp  learning_mode.cpp  maintenance_mode.cpp  model_registry.cpp  mutation_detector.cpp  package_manifest.cpp  pdf_preflight.cpp  pe_preflight.cpp  pending_decision.cpp  platform_uri.cpp  (+33 more)
submission/microsoft/: ABI_MANIFEST.json  AIShieldDrivers.ddf  SUBMISSION_README.md
tests/: windows_download_content_protection.ps1  windows_minifilter_latency_contract.ps1  windows_private_desktop_qualification.ps1  windows_process_guard_rules.ps1  windows_product_qualification.ps1  windows_ransomware_recovery.ps1  windows_tray_agent_contract.ps1
tests/unit/: main.cpp
tests/windows_platform/: main.cpp
tools/: build_private_release_candidate.ps1  check_shared_core_boundary.ps1  complete_private_rc_admin.ps1  deploy_download_content_protection.ps1  deploy_private_rc5_patch.ps1  deploy_private_tray.ps1  deploy_scanner_network_isolation.ps1  diagnose_private_ui.ps1  install_private_desktop_release.ps1  package_developer_full.ps1  package_developer_release.ps1  package_private_desktop.ps1
tools/ai_shield_broker/: main.cpp
tools/ai_shield_browser_host/: main.cpp
tools/ai_shield_diag/: main.cpp
tools/ai_shield_driverctl/: main.cpp
tools/ai_shield_file_scanner/: main.cpp
tools/ai_shield_handle_probe/: main.cpp
tools/ai_shield_integrations/: main.cpp
tools/ai_shield_kernelctl/: main.cpp
tools/ai_shield_prototype/: main.cpp
tools/ai_shield_replay/: main.cpp
tools/ai_shield_service/: main.cpp
(+54 files in other folders)
